[package]
name = "tic-tac-toe"
version = "0.1.0"
authors = ["Brighton Sikarskie <bsikar@tuta.io>"]
edition = "2021"
description = "A simple GUI rust tic-tac-toe game"
readme = "README.md"
homepage = "https://bsikar.github.io/tic-tac-toe/"
repository = "https://github.com/bsikar/tic-tac-toe"
license = "MIT"
keywords = ["gamedev", "graphics", "game", "gui"]
categories = ["games"]

[dependencies]
macroquad = "0.3.13"
